--- a/app/src/main/res/layout/activity_vs.xml
+++ b/app/src/main/res/layout/activity_vs.xml
@@ -28,13 +28,19 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="282dp"
-        android:layout_height="wrap_content"
+        android:layout_width="324dp"
+        android:layout_height="47dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="125dp"
-        android:layout_marginRight="125dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginRight="82dp"
         android:layout_marginBottom="549dp"
         android:text="Time left:"
         android:textColor="@color/black"
@@ -43,14 +49,20 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="221dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="132dp"
-        android:layout_marginRight="132dp"
-        android:layout_marginBottom="173dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="171dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginRight="146dp"
+        android:layout_marginBottom="211dp"
         android:text="3"
         android:textColor="@color/black"
         android:textSize="200sp"
